--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@aspnet/signalr": "^1.0.2",
     "core-js": "^2.5.4",
     "ngx-quill": "^3.3.0",
     "rxjs": "^6.0.0",
